@@ -55,14 +55,16 @@ def register_lazy_exporter(scheme, extensions, module, funcname):
 
     When requesting a specific type of export, load the respective path.
     """
-    def _loader(tree, dest, root, subdir, filtered):
+    def _loader(tree, dest, root, subdir, filtered, use_tree_timestamp):
         mod = __import__(module, globals(), locals(), [funcname])
         func = getattr(mod, funcname)
-        return func(tree, dest, root, subdir, filtered=filtered)
+        return func(tree, dest, root, subdir, filtered=filtered,
+                    use_tree_timestamp=use_tree_timestamp)
     register_exporter(scheme, extensions, _loader)
 
 
-def export(tree, dest, format=None, root=None, subdir=None, filtered=False):
+def export(tree, dest, format=None, root=None, subdir=None, filtered=False,
+           use_tree_timestamp=False):
     """Export the given Tree to the specific destination.
 
     :param tree: A Tree (such as RevisionTree) to export
@@ -81,6 +83,8 @@ def export(tree, dest, format=None, root=None, subdir=None, filtered=False):
         a directory to start exporting from.
     :param filtered: If True, content filtering is applied to the
                      files exported.
+    :param use_tree_timestamp: Whether to use the timestamp stored in the 
+        tree rather than now().
     """
     global _exporters, _exporter_extensions
 
@@ -99,7 +103,8 @@ def export(tree, dest, format=None, root=None, subdir=None, filtered=False):
         raise errors.NoSuchExportFormat(format)
     tree.lock_read()
     try:
-        return _exporters[format](tree, dest, root, subdir, filtered=filtered)
+        return _exporters[format](tree, dest, root, subdir, filtered=filtered,
+                                  use_tree_timestamp=use_tree_timestamp)
     finally:
         tree.unlock()
 
